--- a/all/themes/pixelgarage/less/pxlComponents/block-exposed-search-course-times.less
+++ b/all/themes/pixelgarage/less/pxlComponents/block-exposed-search-course-times.less
@@ -83,7 +83,7 @@
 //
 // modal search dialog
 body.modal-open {
-  position: fixed;
+  position: absolute;
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
 
